; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_frame_adjust_path_mtu.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_frame_adjust_path_mtu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame = type { i32 }

@SET_MTU_UPPER_BOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @frame_adjust_path_mtu(%struct.frame* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.frame*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.frame* %0, %struct.frame** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.frame*, %struct.frame** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = sext i32 %8 to i64
  %10 = load i32, i32* %6, align 4
  %11 = call i64 @datagram_overhead(i32 %10)
  %12 = sub nsw i64 %9, %11
  %13 = load i32, i32* @SET_MTU_UPPER_BOUND, align 4
  %14 = call i32 @frame_set_mtu_dynamic(%struct.frame* %7, i64 %12, i32 %13)
  ret void
}

declare dso_local i32 @frame_set_mtu_dynamic(%struct.frame*, i64, i32) #1

declare dso_local i64 @datagram_overhead(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
